--- a/index.html
+++ b/index.html
@@ -1,1 +1,61 @@
-“Hello World”
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Arep0</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+	<h1><img src="CydiaIcon.png"> Arep0</h1>
+</div>
+
+<div class="container">
+	<div class="well">
+		<p><span class="text-primary"><b>Arep0</span></b> is a Cydia repository.</p>
+		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Arep0.github.io//">Add Directly to Cydia</a>
+    <a class="btn btn-sm btn-default" href="https://youtu.be/4goGcf1cVrQ">How to Add to Cydia</a>
+	</div>
+</div>
+
+<div class="container">
+  <h3 id="wells" class="page-header">My YouTube Channel</h3>
+</div>
+
+<div class="container">
+	<div class="panel panel-default">
+	  <div class="panel-heading"> NsBm0d </div>
+	  <div class="panel-body">
+		This is my YouTube Channel.
+		It also as other things that do not reference to Cydia.<br /><br />
+		<a class="btn btn-xs btn-default" href="https://www.youtube.com/user/NsBm0d">More info</a>
+	  </div>
+	</div>
+
+<div class="container">
+  <h3 id="wells" class="page-header">My Packages</h3>
+</div>
+
+<div class="container">
+	<div class="panel panel-default">
+	  <div class="panel-heading">icons</div>
+	  <div class="panel-body">
+		It is an icon package.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.Arep0.icons">More info</a>
+	  </div>
+	</div>
+
+	<div class="panel panel-default">
+	  <div class="panel-heading">classicxiiiWtest</div>
+	  <div class="panel-body">
+		This is a Test Widget.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.Arep0.classicxiiiWtest">More info</a>
+	  </div>
+	</div>
+</div>
+
+</body>
+</html>
