--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 	  </div>
 	</div>
 
-	<div class="panel panel-default">
+  <div class="panel panel-default">
 	  <div class="panel-heading">classicxiiiWtest</div>
 	  <div class="panel-body">
-		This is a Test Widget.<br /><br />
+		It is an test package.<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.Arep0.classicxiiiWtest">More info</a>
 	  </div>
 	</div>
