--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="panel panel-default">
 	  <div class="panel-heading">classicxiiiWtest</div>
 	  <div class="panel-body">
-		It is an test package.<br /><br />
+		It is an test pkg.<br /><br />
 		<a class="btn btn-xs btn-default" href="depictions/?p=com.Arep0.classicxiiiWtest">More info</a>
 	  </div>
 	</div>
