--- a/depictions/index.html
+++ b/depictions/index.html
@@ -146,7 +146,7 @@
 	<div id="packageHeader" class="container" style="hide">
 		<div class="jumbotron">
 			<h1 id="packageName"></h1>
-			<p>Brought to you by NsRepo</p>
+			<p>Brought to you by classicxiirepo</p>
 		</div>
 	</div>
 
