--- a/depictions/index.html
+++ b/depictions/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>/ NsBm0d /</title>
+  <title>/ Arep0 /</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -146,7 +146,7 @@
 	<div id="packageHeader" class="container" style="hide">
 		<div class="jumbotron">
 			<h1 id="packageName"></h1>
-			<p>Brought to you by  NsBm0d </p>
+			<p>Brought to you by  Arep0 </p>
 		</div>
 	</div>
 
