--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Nrepo</title>
+  <title>Arep0</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -10,42 +10,26 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Nrepo</h1>
+	<h1><img src="CydiaIcon.png"> Arep0</h1>
 </div>
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>Nrepo</span></b> is a Cydia repository.</p>
+		<p><span class="text-primary"><b>Arep0</span></b> is a Cydia repository.</p>
 		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Nrepo.github.io//">Add Directly to Cydia</a>
-    <a class="btn btn-sm btn-default" href="https://youtu.be/4goGcf1cVrQ">How to Add to Cydia</a>
 	</div>
 </div>
 
 <div class="container">
-  <h3 id="wells" class="page-header">My YouTube Channel</h3>
+  <h3 id="wells" class="page-header">My Packages</h3>
 </div>
 
 <div class="container">
 	<div class="panel panel-default">
-	  <div class="panel-heading"> NsBm0d </div>
+	  <div class="panel-heading">classicxiiiWtest</div>
 	  <div class="panel-body">
-		This is my YouTube Channel.
-		It also as other things that do not reference to Cydia.<br /><br />
-		<a class="btn btn-xs btn-default" href="https://www.youtube.com/user/NsBm0d">More info</a>
-	  </div>
-	</div>
-
-<div class="container">
-  <h3 id="wells" class="page-header">Hosted Packages</h3>
-</div>
-
-<div class="container">
-	<div class="panel panel-default">
-	  <div class="panel-heading">Nicon</div>
-	  <div class="panel-body">
-		This is a package with minimal information.
-		It also is an icon package.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.Nrepo.Nicon">More info</a>
+		This is a Test Widget.<br /><br />
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.Arep0.classicxiiiWtest">More info</a>
 	  </div>
 	</div>
 
@@ -53,7 +37,7 @@
 	  <div class="panel-heading">NsB</div>
 	  <div class="panel-body">
 		This is a Theme that is used with Anemone.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.Nrepo.NsB">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.Arep0.NsB">More info</a>
 	  </div>
 	</div>
 </div>
