--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
  <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Arep0</title>
+  <title>classicxiirepo</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -10,12 +10,12 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> Arep0</h1>
+	<h1><img src="CydiaIcon.png"> classicxiirepo</h1>
 </div>
 
 <div class="container">
 	<div class="well">
-		<p><span class="text-primary"><b>Arep0</span></b> is a Cydia repository.</p>
+		<p><span class="text-primary"><b>classicxiirepo</span></b> is a Cydia repository.</p>
 		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://Nrepo.github.io//">Add Directly to Cydia</a>
 	</div>
 </div>
