--- a/depictions/index.html
+++ b/depictions/index.html
@@ -237,9 +237,9 @@
 
 </script>
 
-<div id="If you want a repo similar to this check out a template I made">
+<div id="Follow me on Twitter">
 	<div class="container">
-		<h5>If you want a repo similar to this check out a template I made</h5>
+		<h5>Follow me on Twitter</h5>
 		<ul class="list-group" id="repoFooterLinks">
 		</ul>
 	</div>
