--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	  <div class="panel-heading">classicxiiiWtest</div>
 	  <div class="panel-body">
 		This is a Test Widget.<br /><br />
-		<a class="btn btn-xs btn-default" href="depictions/?p=com.Arep0.classicxiiiWtest">More info</a>
+		<a class="btn btn-xs btn-default" href="depictions/?p=com.classicxiirepo.classicxiiiWtest">More info</a>
 	  </div>
 	</div>
 </div>
