--- a/depictions/changelog.html
+++ b/depictions/changelog.html
@@ -109,7 +109,7 @@
 
 <div id="contactInfo">
 	<div class="container">
-		<h5>If you want a repo similar to this check out a template I made</h5>
+		<h5>Follow me on Twitter</h5>
 		<ul class="list-group" id="repoFooterLinks">
 		</ul>
 	</div>
